// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery renders global gallery view 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="gallery"
  >
    <div
      class="gallery-panel"
    >
      <div
        class="gallery-label"
      >
        All streets
      </div>
      <div
        class="gallery-streets-container"
      >
        <div
          class="streets-scrollable-container"
        >
          <button
            class="scrollable scroll-left"
            hidden="true"
            style="left: -15px; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            <svg
              class="svg-inline--fa fa-chevron-left"
            />
          </button>
          <div
            class="streets"
          >
            <div
              class="gallery-street-item gallery-selected"
            >
              <a
                href="/foo/435/baz"
              >
                <canvas
                  height="220"
                  width="360"
                />
                <div
                  class="street-name"
                >
                  <div
                    class="street-name-text"
                  >
                    Baz
                  </div>
                </div>
                <span
                  class="gallery-street-item-date"
                >
                  <time
                    datetime="2018-04-27T20:47:03.477Z"
                    title="2018-04-27T20:47:03.477Z"
                  >
                    April 27, 2018
                  </time>
                </span>
                <span
                  class="gallery-street-item-creator"
                >
                  foo
                </span>
              </a>
            </div>
          </div>
          <button
            class="scrollable scroll-right"
            hidden="true"
            style="right: -15px; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            <svg
              class="svg-inline--fa fa-chevron-right"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="gallery-shield"
      data-testid="gallery-shield"
    />
  </div>
</DocumentFragment>
`;

exports[`Gallery renders loading 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="gallery"
  >
    <div
      class="gallery-panel"
    >
      <div
        aria-busy="true"
        aria-live="polite"
        class="gallery-loading"
      >
        <div
          class="loading-spinner"
        />
      </div>
    </div>
    <div
      class="gallery-shield"
      data-testid="gallery-shield"
    />
  </div>
</DocumentFragment>
`;

exports[`Gallery renders main gallery view for another user’s streets 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="gallery"
  >
    <div
      class="gallery-panel"
    >
      <div
        class="gallery-label"
      >
        <span
          class="avatar"
        >
          <img
            alt="foo"
          />
        </span>
        <div
          class="gallery-user-id"
        >
          foo
        </div>
      </div>
      <div
        class="gallery-street-count"
      >
        1 street
      </div>
      <div
        class="gallery-streets-container"
      >
        <div
          class="streets-scrollable-container"
        >
          <button
            class="scrollable scroll-left"
            hidden="true"
            style="left: -15px; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            <svg
              class="svg-inline--fa fa-chevron-left"
            />
          </button>
          <div
            class="streets"
          >
            <div
              class="gallery-street-item gallery-selected"
            >
              <a
                href="/foo/435/baz"
              >
                <canvas
                  height="220"
                  width="360"
                />
                <div
                  class="street-name"
                >
                  <div
                    class="street-name-text"
                  >
                    Baz
                  </div>
                </div>
                <span
                  class="gallery-street-item-date"
                >
                  <time
                    datetime="2018-04-27T20:47:03.477Z"
                    title="2018-04-27T20:47:03.477Z"
                  >
                    April 27, 2018
                  </time>
                </span>
              </a>
            </div>
          </div>
          <button
            class="scrollable scroll-right"
            hidden="true"
            style="right: -15px; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            <svg
              class="svg-inline--fa fa-chevron-right"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="gallery-shield"
      data-testid="gallery-shield"
    />
  </div>
</DocumentFragment>
`;

exports[`Gallery renders main gallery view for user’s own streets 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="gallery"
  >
    <div
      class="gallery-panel"
    >
      <div
        class="gallery-label"
      >
        <span
          class="avatar"
        >
          <img
            alt="foo"
          />
        </span>
        <div
          class="gallery-user-id"
        >
          foo
        </div>
      </div>
      <div
        class="gallery-street-count"
      >
        1 street
      </div>
      <div
        class="gallery-streets-container"
      >
        <div
          class="gallery-user-buttons"
        >
          <a
            class="button-like gallery-new-street"
            href="/new"
            rel="noopener noreferrer"
            target="_blank"
          >
            Create new street
          </a>
          <a
            class="button-like gallery-copy-last-street"
            href="/copy-last"
            rel="noopener noreferrer"
            target="_blank"
          >
            Make a copy
          </a>
        </div>
        <div
          class="streets-scrollable-container"
        >
          <button
            class="scrollable scroll-left"
            hidden="true"
            style="left: -15px; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            <svg
              class="svg-inline--fa fa-chevron-left"
            />
          </button>
          <div
            class="streets"
          >
            <div
              class="gallery-street-item gallery-selected"
            >
              <a
                href="/foo/435/baz"
              >
                <canvas
                  height="220"
                  width="360"
                />
                <div
                  class="street-name"
                >
                  <div
                    class="street-name-text"
                  >
                    Baz
                  </div>
                </div>
                <span
                  class="gallery-street-item-date"
                >
                  <time
                    datetime="2018-04-27T20:47:03.477Z"
                    title="2018-04-27T20:47:03.477Z"
                  >
                    April 27, 2018
                  </time>
                </span>
              </a>
              <button
                class="gallery-street-item-delete"
                title="Delete street"
              >
                <svg
                  class="octicon"
                />
              </button>
            </div>
          </div>
          <button
            class="scrollable scroll-right"
            hidden="true"
            style="right: -15px; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            <svg
              class="svg-inline--fa fa-chevron-right"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="gallery-shield"
      data-testid="gallery-shield"
    />
  </div>
</DocumentFragment>
`;
